infra/k8s/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      nodeSelector:
        kubernetes.io/hostname: ingress-vm
      containers:
        - name: web
          image: davidchen617/knowledgehub-web:IMAGE_TAG
          ports:
            - containerPort: 80
